k8s/laravel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deployment
  labels:
    app: laravel
spec:
  replicas: 2 # Haute disponibilité : 2 pods Laravel
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          # Remplacez par l'URL de votre registre Docker, ex: us-docker.pkg.dev/.../picme-laravel
          image: picme225-laravel:latest 
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1"
          volumeMounts:
            - name: nginx-static-conf
              mountPath: /opt/docker/etc/nginx/vhost.common.d/05-static.conf
              subPath: 05-static.conf
      volumes:
        - name: nginx-static-conf
          configMap:
            name: nginx-static-conf

---
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  selector:
    app: laravel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
